Prevent the popup form body from overlapping the modal window (see #6825)

--- a/system/themes/flexible/src/main.css
+++ b/system/themes/flexible/src/main.css
@@ -365,7 +365,7 @@ input[type=search]::-webkit-search-decoration {
 	left:0;
 	bottom:0;
 	width:100%;
-	height:52px;
+	max-height:52px;
 }
 .tl_submit_container {
 	padding:12px 18px;
